Fix SIgnedNonce